<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bell_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/alarm_icon"
            android:src="@drawable/bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toStartOf="@id/bell_icon"
            app:layout_constraintTop_toTopOf="@id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_submenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        app:tabGravity="start"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabPaddingStart="0dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/bright_gray">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabarpopularity" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabbarquest" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabbarfollowing" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/content_divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/bright_gray" />



</androidx.appcompat.widget.LinearLayoutCompat>
