<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bell_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/alarm_icon"
            android:src="@drawable/bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toStartOf="@id/bell_icon"
            app:layout_constraintTop_toTopOf="@id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_submenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        app:tabGravity="start"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabPaddingStart="0dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/bright_gray">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabarpopularity" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabbarquest" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabbarfollowing" />

    </com.google.android.material.tabs.TabLayout>

        <View
        android:id="@+id/content_divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/bright_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@id/tab_submenu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <include
                layout="@layout/in_scrollview"
                />
            <Button
                android:id="@+id/whole_rank_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="랭킹 전체보기"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:background="@color/bright_gray"
                />

            <include
                layout="@layout/new_content"
                />

            <include
                layout="@layout/tab_search_menu"/>

            <include
                layout="@layout/number_input_layout"/>

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottomnavi_menu"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/btm_color_seletor"
        android:layout_alignParentBottom="true"/>





</RelativeLayout>